# multidocs

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
example/: .gitignore  docgen.yml
src/docgen/: __main__.py  _config.py  _settings.py  cli.py  config.py  entities.py  globals.py  search.py  settings.py
src/docgen/content/: __init__.py  converter.py  markdown.py  utils.py
src/docgen/sources/: __init__.py  git.py  path.py
src/docgen/static/: style.css
src/docgen/templates/: content.html.j2  directory.html.j2  layout.html.j2  macros.j2  page.html.j2  search.html.j2  sidebar.html.j2
src/docgen/web/: app.py  search.py  static.py
src/docgen/web/auth/: __init__.py  github.py
src/docgen/web/static/: collapsible-lists.js  style.css
src/multidocs/: __main__.py  cli.py  config.py  entities.py  globals.py  jinja2.py  search.py  settings.py
src/multidocs/content/: __init__.py  markdown.py  utils.py
src/multidocs/sources/: __init__.py  git.py  path.py
src/multidocs/templates/: layout.html.j2  search.html.j2
src/multidocs/web/: app.py  search.py  static.py
src/multidocs/web/auth/: __init__.py  github.py
src/multidocs/web/static/: style.css
tests/: content_markdown_test.py  content_test.py  content_utils_test.py  entities_test.py
