[tool.poetry]
name = "multidocs"
description = "Generate documentation from multiple sources."
authors = ["Andreas Lutro <anlutro@gmail.com>"]
version = "0.1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
bleach = "^2.1"
commonmarkextensions = "^0.0.4"
flask = "^1.0"
flask-oauthlib = "^0.9.5"
jinja2 = "^2.10"
python-slugify = "^1.2"
pyyaml = "^3.13"
whoosh = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flask = "*"
pylint = "*"

[tool.poetry.scripts]
multidocs = "multidocs.cli:main"
